--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="footer">Remember that if you choose very distant dates the process could take several seconds, I recommend that you try from month to month.</string>
     <string name="start_date_title">Start date</string>
     <string name="end_date_title">Ending date</string>
-    <string name="start_date">1995–06–19</string>
-    <string name="end_date">1995–06–25</string>
+    <string name="start_date">1995-06-19</string>
+    <string name="end_date">1995-07-19</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
